fixed bundle issue to include pre-built alert + changed priority of alert view items' heights to remove warnings

--- a/Example/Modal/TestModal.xib
+++ b/Example/Modal/TestModal.xib
@@ -19,8 +19,11 @@
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dhr-Ne-tdw">
                     <rect key="frame" x="8" y="629" width="359" height="30"/>
                     <state key="normal" title="something"/>
+                    <connections>
+                        <action selector="somethingAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="7wO-RY-W0Y"/>
+                    </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hIW-en-ast">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hIW-en-ast">
                     <rect key="frame" x="8" y="28" width="359" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
