--- a/Example/Modal/Base.lproj/Main.storyboard
+++ b/Example/Modal/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,20 +21,45 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1vb-0c-jQQ">
-                                <rect key="frame" x="36" y="318.5" width="303" height="30"/>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <action selector="show:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="4YL-4u-V2p"/>
-                                </connections>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="NtI-lp-xiX">
+                                <rect key="frame" x="24" y="28" width="327" height="631"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1vb-0c-jQQ">
+                                        <rect key="frame" x="148.5" y="0.0" width="30" height="198.5"/>
+                                        <state key="normal" title="List">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="list:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="oIU-d1-4MB"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XwD-Ip-j60">
+                                        <rect key="frame" x="136.5" y="216.5" width="54" height="198"/>
+                                        <state key="normal" title="Camera">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="camera:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="xUJ-x6-FkX"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rgb-WG-rI2">
+                                        <rect key="frame" x="147" y="432.5" width="33" height="198.5"/>
+                                        <state key="normal" title="Alert">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="alert:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Gh1-bv-syq"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="0.13725490200000001" green="0.25098039220000001" blue="0.45882352939999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="1vb-0c-jQQ" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="DL4-g0-JX6"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="1vb-0c-jQQ" secondAttribute="trailing" constant="20" id="aIE-8h-j2w"/>
-                            <constraint firstItem="1vb-0c-jQQ" firstAttribute="centerY" secondItem="kh9-bI-dsS" secondAttribute="centerY" id="acp-Z2-aym"/>
-                            <constraint firstItem="1vb-0c-jQQ" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="20" id="j4n-V7-OiA"/>
+                            <constraint firstItem="NtI-lp-xiX" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="8" id="ALw-2T-zzP"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="NtI-lp-xiX" secondAttribute="trailing" constant="8" id="Abd-6w-t54"/>
+                            <constraint firstItem="NtI-lp-xiX" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="8" id="Ukz-3m-1m3"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="NtI-lp-xiX" secondAttribute="bottom" constant="8" id="wDA-bI-7vQ"/>
                         </constraints>
                     </view>
                 </viewController>
